--- a/03-fetch-lab/index.html
+++ b/03-fetch-lab/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/github-promises.js" defer></script>
+    <script src="git-users-promise.js" defer></script>
 </head>
 <body>
-    <h2>GitHub Users Demo - Promises</h2> 
+    <h2>Github Users Demo</h2>
     <div id="results"></div>
 </body>
 </html>
