--- a/03-fetch-lab/index.html
+++ b/03-fetch-lab/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="git-users-promise.js" defer></script>
+    <script src="git-users-async-await.js" defer></script>
 </head>
 <body>
     <h2>Github Users Demo</h2>
